--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,45 +1,109 @@
-# Change Prefix
-set -g prefix C-a
+# Set true colour support on (not needed apparently) 
+set-option -ga terminal-overrides ",st-256color:Tc"
+
+set-option -g default-command '/bin/bash'
+
+# Start window/pane index from 1 instead of 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g status-keys vi
+setw -g mode-keys vi
+set -g status-interval 60
+set -g history-limit 50
+
+# Change prefix
 unbind C-b
-bind C-a send-prefix
+set -g prefix C-a
 
-#C-a C-a
-bind-key C-a last-window
+# Sane splits (vim
+bind-key v split-window -h
+bind-key s split-window -v
+#bind-key v split-window -h
+#bind-key h split-window -v
+unbind %
+unbind '“'
 
-# Allow for faster Key repetition
-set -s escape-time 0
 
-# Use Alt-vim keys to switch panes
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+# HAVEN'R GOTTEN THIS TO WORK
+bind -r M-h resize-pane -L 5
+bind -r M-j resize-pane -D 5
+bind -r M-k resize-pane -U 5
+bind -r M-l resize-pane -R 5
+
+# Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
-bind -n M-j select-pane -D
+bind -n M-j select-pane -D 
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-# Use Alt-arrow keys to switch panes #DONT WORK
+# Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Use Shift-arrow keys to switch windows #DONT WORK
-bind -n S-Left previous-window
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
 bind -n S-Right next-window
 
-# Color Setting
-set-option -g default-terminal "screen-256color"
+# Copy mode "vi" style settings
+unbind p
+bind p paste-buffer
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-selection
+bind -T copy-mode-vi 'V' send -X rectangle-toggle
 
-# Use different keys for horz and vert split (#{pane} not needed works in 1.8 by default)
-bind h split-window -h -c '#{pane_current_path}'
-bind v split-window -v -c '#{pane_current_path}'
+# enable mouse support for switching panes/windows
+set -g mouse on
 
-# Config reload
-bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded." #DONT WORK
+# Notify us of any changes to any windows
+setw -g monitor-activity on
 
-# Theme
-set -g status-bg black
-set -g status-fg white
+# No delay for escape key press (no escape sequences)
+set -sg escape-time 0
 
-## Window Setings
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg color255
-setw -g window-status-bell-bg color1
+# used for a script to set all necessary bg colours
+# BGCOLOUR = colour4
+
+
+# match pane to status bar
+## index number colour
+setw -g display-panes-active-colour colour1
+setw -g display-panes-colour colour4
+set -g pane-active-border-style fg=colour4,bg=default
+
+# Status bar tweaks
+# good bg colours: colour13, colour69, colour2, colour12, colour221
+# ... colour4, colour7, colour14
+set -g status on
+set -g status-bg white
+set -g status-fg black
+set -g status-style fg=black,bg=colour4
+## Left tweaks
+set -g status-left "[##\#I #S]"
+set -g status-left-length 10
+set -g status-left-style default
+## Centre (window status)
+set -g status-justify centre
+set -g window-status-format "#I(#F)"
+set -g window-status-current-format "#[bg="#ffffff", bold]#I(#F)"
+## Right
+set -g status-right "#{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}#(echo -e RAM: $(free -m | grep Mem | printf '%0.2f\n' $(awk '{print ($3/$2)*100}'))%)  #(echo -e BAT: $(cat /sys/class/power_supply/BAT1/capacity)%)  [%d-%b-%y // %H:%M]"
+set -g status-right-length 60
+set -g status-right-style default
+
+# Comand window colours
+set -g message-command-style fg=colour221,bg=black
+set -g message-style fg=black,bg=colour221
+
+# Notes:
+# Sync tmux panes == sending keyboard input to all panes
+#  simultaneously
+# 
